--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "jwt-simple": "^0.5.0",
     "mongoose": "^4.4.14",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
