--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -14,10 +14,25 @@
     "jade": "^1.11.0",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.4.14",
+    "mongoose-paginate": "^5.0.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-jwt": "^0.1.3",
+    "angular-resource": "^1.5.8",
+    "angular-route": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
+    "angular-socialshare": "^2.2.8",
+    "angular-storage": "0.0.15",
+    "angular-ui-bootstrap": "^2.1.3",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0",
+    "textangular": "^1.5.9"
   }
 }
